fixed problem with horizontal scroll, add new font-weight

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  max-width: 100%;
   padding: 0 50px;
 }
 
@@ -34,12 +34,12 @@ body {
 }
 
 .nav__item {
-  margin-right: 20px;
-  margin-left: 0;
+  margin-right: 0;
+  margin-left: 20px;
 }
 
-.nav__item:last-child {
-  margin-right: 0;
+.nav__item:first-child {
+  margin-left: 0;
 }
 
 .nav__link {
@@ -48,7 +48,7 @@ body {
   align-items: center;
   white-space: nowrap;
   font-size: 12px;
-  font-weight: 500;
+  font-weight: bold;
   height: 60px;
   text-decoration: none;
   text-transform: uppercase;
